--- a/index.html.erb
+++ b/index.html.erb
@@ -15,15 +15,10 @@ body {
  
 
 h1 {
-
   color: #d1dbdd;
-
   text-align: center;
-
   font-size: 140px;
-
   font-family: Century Gothic;
-
 }
 
  
@@ -38,7 +33,7 @@ button {
 
   font-size: 50px;
 
-  font-family: Century Gothic Bold;
+  font-family: "Century Gothic";
 
   font-style: Bold;
 
@@ -58,9 +53,6 @@ button {
 
 }
 
- 
-
- 
 
 </style>
 
