--- a/login.html.erb
+++ b/login.html.erb
@@ -177,8 +177,6 @@ img.avatar {
 
  
 
-<form action="/action_page.php" method="post">
-
   <div class="imgcontainer">
 
   
@@ -188,9 +186,10 @@ img.avatar {
  
 
   <div class="container">
+    
     <input type="text" placeholder="Enter Name" name="uname" required>
 
-    <button type="submit">SUBMIT</button>
+    <button onclick="window.location.href = 'http://localhost:3000/game/map';">SUBMIT</button>
 
     <label>
 
@@ -203,7 +202,6 @@ img.avatar {
   <div class="container" style="background-color:#252525">
 
     <button onclick="window.location.href = 'http://localhost:3000/game/index';">BACK</button>
-
   </div>
 
 </form>
